Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125319

Scaling issue occurs when the window is moved due to disconnecting the screen.

XMLWordPrintable

    • Linux/Wayland, Linux/X11, Windows
    • 78a0018c8 (dev), bad91be75 (tqtc/lts-6.8), 19dec452e (6.9), a264d099f (6.10)

      A scaling issue in qml window occurs with multiple monitors when external monitor with high dpi support is attached to a laptop with a standard screen.

      To reproduce the issue:

      1. Run the attached example project.
      2. Move Window to external monitor.
      3. Disconnect external monitor. Application window moved to primary screen and looks good.
      4. Now connect external monitor again, window getting moved to external monitor but scaling is not correct.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            morteza.jamshidi Morteza Jamshidi
            mahdi.belila Mehdi Belila
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: