Windows: Check for screen changes for each window after adding screen

When a new screen is attached Window might move windows to the new
screen automatically, in which case they will get a WM_DPICHANGED
event. But at that point we have not received WM_DISPLAYCHANGE yet,
so we fail to reflect the new screen's DPI.

To account for this we explicitly check for screen change after adding
a new screen.

Fixes: QTBUG-125319
Change-Id: Ic854fe9f9ae52f53bb34cb8434111a6a1ba032d2
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 78a0018c86b98a63ccb13f61d4a33e94c3f053cc)
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>